--- a/Project_with_car/css/style2.css
+++ b/Project_with_car/css/style2.css
@@ -21,7 +21,7 @@ nav ul{
     height: 520px;
 }
 #map{
-    margin: 20px 0 20px 0;
+    margin-top: 20px;
     height: 225px;
 }
 #map img{
@@ -29,7 +29,7 @@ nav ul{
     height: 100%;
 }
 
-nav ul, .main_title, .small_card, .big_card, footer, .form{
+nav ul, .main_title, .small_card, .big_card, footer{
     background-color: white;
 }
 
@@ -49,8 +49,8 @@ nav ul li:nth-child(n+2){
 }
 
 nav ul li:nth-child(n+2) a p{
-    padding: 10%;
-    padding-left: 18%;
+    padding: 20px;
+    padding-left: 40px;
 }
 
 nav ul li img{
@@ -114,7 +114,7 @@ h2{margin-top: -5px; padding-left: 20px;}
 
 footer{
     width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
     height: auto;
     text-align: center;
     font-size: 18px;
@@ -153,17 +153,17 @@ article{
 
 .big_card{
     margin: 20px 0 0 0;
+    padding: 0;
 }
 
 /*Форма*/
 .big_card img{
-    max-width: 100%;
-    
+    width: 300px;
 }
 
-.form{
-    margin: 20px 0 0 0;
-    padding: 0 0 8px 7%;
+form{
+    width: calc(100% - 300px);
+    float: right;
 }
 
 fieldset{
@@ -207,14 +207,6 @@ input[type=submit]
 }
 
 /*Доп страницы*/
-
-.big_pic{
-    margin-top: 28px;
-}
-
-.small_pic{
-    margin-top: 20px;
-}
 
 .big_pic img, .small_pic img{
     width: 100%;
