--- a/Project_with_car/css/style.css
+++ b/Project_with_car/css/style.css
@@ -5,31 +5,57 @@ body{
 }
 
 #wrapper{
+    width: 1100px;
     height: auto;
-    margin: 5px 0 5px 0;
+    margin: auto;
     background-color: #2b3740;
 }
 
-#img{
+header{
+    width: 100%;
+    height: auto;
+}
+
+header img{
     width: 100%;
 }
 
-nav{
+#main{
+    width: 80%;
     height: auto;
+    margin: 0 10%;
+}
+
+nav{
+    width: 200px;
+    height: auto;
+    float: left;
+    margin-top: 20px;
 }
 nav ul{
     height: 520px;
 }
 #map{
-    margin: 20px 0 20px 0;
+    margin-top: 20px;
+    width: 200px;
     height: 225px;
 }
 #map img{
     width: 100%;
     height: 100%;
 }
+#content{
+    float: right;
+    width: calc(100% - 200px);
+}
 
-nav ul, .main_title, .small_card, .big_card, footer, .form{
+footer{
+    width: 80%;
+    margin: 10px 10%;
+    height: auto;
+}
+
+nav ul, #main_title, .small_card, .big_card, footer{
     background-color: white;
 }
 
@@ -42,15 +68,13 @@ nav ul{
 
 nav ul li{
     list-style: none;
+    text-align: left;
 }
 
-nav ul li:nth-child(n+2){
-    margin-top: 20px;
-}
 
 nav ul li:nth-child(n+2) a p{
-    padding: 10%;
-    padding-left: 18%;
+    padding: 20px;
+    padding-left: 40px;
 }
 
 nav ul li img{
@@ -69,14 +93,13 @@ nav ul li:nth-child(n+2):active{
 }
 
 /*Ссылки*/
-a, a:hover{
+a{
     outline: none;
     text-decoration: none;
     color: black;
 }
 
-
-.small_card a{
+table a{
     padding-left: 27px;
     width: auto;
     background-image: url("../images/Button.jpg");
@@ -89,9 +112,7 @@ a, a:hover{
     font-family: 'Trebushet MS', Helvetica, sans-serif;
 }
 
-h1, h2{
-    font-weight: 600;
-}
+
 
 small{
     color: #227dab;
@@ -100,51 +121,44 @@ small{
     padding-left: 20px;
 }
 
-.main_title{
-    height: 90px;
-}
-
-.main_title h1{
-    margin: 0;
-    padding: 25px;
-    text-align: center;
+#main_title h1{
+    margin: 25px 0;
 }
 
 h2{margin-top: -5px; padding-left: 20px;}
 
 footer{
-    width: 100%;
-    margin-top: 20px;
-    height: auto;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
     padding: 25px 0 1px 0;
 }
 
-.small_card p{
-    height: 121px;
+table p{
+    height: 128px;
     overflow: hidden;
-    text-overflow: ellipsis;
     font-size: 14px;
 }
 
 /*Таблица*/
+table{
+    border-spacing: 20px;
+}
 
 article{
-    padding: 14px 20px;
+    padding: 10px 20px;
 }
 
 .small_card{
+    width: 200px;
     border-bottom: 3px solid #227dab;
     padding: 0;
-    margin-top: 28px;
+    margin: 0;
     padding-bottom: 3px;
 }
 
 .small_card img{
-    width: 100%;
-    height: 160px;
+    width: 205px; height: 160px;
 }
 
 .small_card figure{
@@ -152,18 +166,19 @@ article{
 }
 
 .big_card{
-    margin: 20px 0 0 0;
+    margin: 0;
+    padding: 0;
 }
 
 /*Форма*/
 .big_card img{
-    max-width: 100%;
-    
+    width: 300px;
+    float: left;
 }
 
-.form{
-    margin: 20px 0 0 0;
-    padding: 0 0 8px 7%;
+form{
+    width: calc(100% - 300px);
+    float: right;
 }
 
 fieldset{
@@ -175,7 +190,6 @@ legend{
     font-size: 16px;
     font-weight: bold;
     padding: 20px 0;
-    margin-bottom: 0;
 }
 
 input, select{
@@ -207,14 +221,6 @@ input[type=submit]
 }
 
 /*Доп страницы*/
-
-.big_pic{
-    margin-top: 28px;
-}
-
-.small_pic{
-    margin-top: 20px;
-}
 
 .big_pic img, .small_pic img{
     width: 100%;
